# HandGestureDetection

./: .gitignore  CMakeLists.txt  README.md
include/: CurveCSS.h  SkinDetector.h
src/: CurveCSS.cpp  SkinDetector.cpp  main.cpp
